test/at/error/CellThatErrors.js
(function() {
  define(function() {
    throw (window.TEST_error = new Error());
  });
}).call(this);
